fix cancel button and update component styling

--- a/packages/mgt-components/src/styles/shared-sass-variables.scss
+++ b/packages/mgt-components/src/styles/shared-sass-variables.scss
@@ -12,7 +12,7 @@ $commblue_primary: #0078d4; /* Comm Blue / Primary #0078D4 */
 $commblue_shade10: #106ebe; /* Comm Blue / Shade 10 #106EBE */
 $commblue_shade20: #005a9e; /* Comm Blue / Shade 20 #005A9E */
 
-$gray10: #faf9f8; /* Neutrals / Web / Gray 10 #FAF9F8 */
+$gray10: #fbfbfb; /* Neutrals / Web / Gray 10 #FAF9F8 */
 $gray20: #f3f2f1; /* Neutrals / Web / Gray 20 #F3F2F1 */
 $gray30: #edebe9; /* Neutrals / Web / Gray 30 #EDEBE9 */
 $gray40: #e1dfdd; /* Neutrals / Web / Gray 40 #E1DFDD */
