--- a/packages/mgt-components/src/components/mgt-tasks-base/mgt-tasks-base.scss
+++ b/packages/mgt-components/src/components/mgt-tasks-base/mgt-tasks-base.scss
@@ -17,6 +17,7 @@ $task-icon-border-completed: var(--task-icon-border-completed, solid 1px white);
 $task-icon-border-radius: var(--task-icon-border-radius, 50%);
 $task-icon-color-completed: var(--task-icon-color-completed, white);
 $task-border-completed: var(--task-complete-border, 2px dotted inherit);
+$background-color: set-var(background-color__sub1, $theme-default, $common);
 
 :host {
   font-family: $font-family;
@@ -31,7 +32,6 @@ $task-border-completed: var(--task-complete-border, 2px dotted inherit);
     display: none;
     -webkit-appearance: none;
   }
-
 
   .TaskIcon {
     font-family: 'FabricMDL2Icons';
@@ -155,9 +155,11 @@ $task-border-completed: var(--task-complete-border, 2px dotted inherit);
   .Task {
     position: relative;
     margin: var(--task-margin, 0 0 18px 0);
-    padding: var(--task-padding, 0 0 0 0);
+    padding: var(--task-padding, 12px);
     background-color: $background-color;
     border: set-var(border, $theme-default, $tasks);
+    border-radius: 8px;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 
     .TaskContent {
       display: flex;
@@ -207,7 +209,7 @@ $task-border-completed: var(--task-complete-border, 2px dotted inherit);
           grid-column: 1 / 3;
           -ms-grid-column: 1;
           -ms-grid-column-span: 2;
-          margin: 22px 0 4px;
+          align-self: center;
         }
 
         .TaskGroup {
@@ -354,7 +356,7 @@ $task-border-completed: var(--task-complete-border, 2px dotted inherit);
 
         svg {
           vertical-align: middle;
-          margin-right: 4px;
+          margin-right: 6px;
 
           path {
             fill: $detail__color;
@@ -476,6 +478,7 @@ $task-border-completed: var(--task-complete-border, 2px dotted inherit);
       margin: var(--task-new-margin, var(--task-margin, 0 0 24px 0));
       display: flex;
       flex-direction: row;
+      height: 138px;
 
       .SelfAssign {
         display: none;
@@ -507,29 +510,37 @@ $task-border-completed: var(--task-complete-border, 2px dotted inherit);
         flex: 1 1 auto;
         align-content: center;
         vertical-align: middle;
-        margin: 0 0 0 12px;
+        margin: 0;
 
         .TaskDetailsContainer {
           display: flex;
           flex-direction: column;
-          align-items: stretch;
-          margin: 0;
+          margin: 26px 0 0 26px;
 
           .TaskTitle {
             display: flex;
+            border-radius: 4px;
+            border: 1px solid #e5e5e5;
+            padding: 2px;
+            width: 390px;
+            height: 32px;
+            margin-bottom: 30px;
+            align-self: flex-start;
 
             input {
-              flex: 1;
+              flex: none;
               font-family: var(--default-font-family, 'Segoe UI');
-              margin: var(--task-new-input-margin, 0 24px 0 16px);
-              padding: var(--task-new-input-padding, 6px);
+              margin: var(--task-new-input-margin, 6px 0 6px 12px);
               font-size: var(--task-new-input-font-size, 14px);
-              font-weight: 600;
               border: var(--task-new-border, none);
-              border-bottom: 1px solid $ms-color-gray40;
               outline: none;
               border-radius: 0;
               background-color: set-var(background-color__sub1, $theme-default, $common);
+              width: 83px;
+              align-items: center;
+              display: flex;
+              color: #717171;
+              order: 0;
             }
 
             input:hover {
@@ -547,13 +558,14 @@ $task-border-completed: var(--task-complete-border, 2px dotted inherit);
 
           .TaskDetails {
             display: flex;
-            justify-content: stretch;
+            justify-content: space-between;
             align-items: center;
             flex-wrap: wrap;
-            margin: 14px 0 14px 4px;
+            margin-bottom: 26px;
+            width: 390px;
 
             .NewTaskGroup {
-              margin: 8px 16px;
+              margin: 0;
             }
 
             .NewTaskBucket {
@@ -561,7 +573,7 @@ $task-border-completed: var(--task-complete-border, 2px dotted inherit);
             }
 
             .NewTaskDue {
-              margin: 8px 16px;
+              margin: 0;
             }
 
             .NewTaskAssignee {
@@ -579,12 +591,13 @@ $task-border-completed: var(--task-complete-border, 2px dotted inherit);
             input {
               font-family: $font-family;
               font-size: 12px;
-              font-weight: 600;
-              border: var(--task-new-select-border, none);
+              border: 1px solid #e5e5e5;
               border-bottom: 1px solid $ms-color-gray40;
-              outline: none;
-              border-radius: 0;
-              padding: 4px;
+              border-radius: 4px;
+              outline: 0px;
+              padding: 2px;
+              width: 102px;
+              height: 32px;
 
               &:hover {
                 border-bottom: 1px solid $ms-color-communicationShade10;
@@ -598,37 +611,48 @@ $task-border-completed: var(--task-complete-border, 2px dotted inherit);
                 border-bottom: 1px solid $ms-color-communicationPrimary;
               }
             }
+
+            select,
+            input[type='date'] {
+              border-bottom: 1px solid #e5e5e5;
+              padding-left: 12px;
+            }
           }
         }
       }
 
       .TaskAddButtonContainer {
-        flex: 0 0 auto;
-        display: flex;
+        display: block;
+        margin-right: 26px;
 
         .TaskAdd,
         .TaskCancel {
-          height: 100%;
-          max-width: 50px;
-          min-width: 50px;
-          flex: 1 1 auto;
           justify-content: center;
           align-items: center;
-          display: flex;
           cursor: pointer;
+          flex: 0 0 auto;
+          display: flex;
+          width: var(--tasks-new-button-width, 100px);
+          height: var(--tasks-new-button-height, 32px);
+          border-radius: 4px;
+          padding: 2px;
+          border: var(--tasks-new-button-border, solid 1px rgba(0, 0, 0, 0));
+          font-family: var(--default-font-family, 'Segoe UI');
+          font-size: 14px;
+          line-height: 20px;
+          // margin: 0 12px 0 32px;
         }
 
         .TaskAdd {
           color: white;
           background: var(--task-new-add-button-background, $ms-color-communicationPrimary);
+          margin: 26px 0 12px auto;
+          // margin: 22px 12px 8px 32px;
         }
 
         .TaskCancel {
-          font-family: var(--default-font-family, 'Segoe UI');
-          font-size: 14px;
-          font-weight: 600;
           color: $button__color--cancel;
-          margin: 0 12px 0 32px;
+          border: 1px solid #e5e5e5;
         }
 
         &.Disabled .TaskAdd {
