--- a/packages/mgt-components/src/components/mgt-people-picker/mgt-people-picker.scss
+++ b/packages/mgt-components/src/components/mgt-people-picker/mgt-people-picker.scss
@@ -201,11 +201,10 @@ mgt-people-picker .root {
             font-style: normal;
             font-weight: 600;
             font-size: 14px;
+            margin: var(--file-item-margin, 4px);
+            border-radius: 4px;
             &:hover {
               background-color: $dropdown-item__background-color--hover;
-              border-radius: 4px;
-              padding-left: 4px;
-              padding-right: 4px;
             }
             &.focused {
               background-color: $dropdown-item__background-color--hover;
