--- a/packages/mgt-components/src/components/mgt-tasks-base/mgt-tasks-base.scss
+++ b/packages/mgt-components/src/components/mgt-tasks-base/mgt-tasks-base.scss
@@ -17,7 +17,6 @@ $task-icon-border-completed: var(--task-icon-border-completed, solid 1px white);
 $task-icon-border-radius: var(--task-icon-border-radius, 50%);
 $task-icon-color-completed: var(--task-icon-color-completed, white);
 $task-border-completed: var(--task-complete-border, 2px dotted inherit);
-$background-color: set-var(background-color__sub1, $theme-default, $common);
 
 :host {
   font-family: $font-family;
@@ -155,11 +154,9 @@ $background-color: set-var(background-color__sub1, $theme-default, $common);
   .Task {
     position: relative;
     margin: var(--task-margin, 0 0 18px 0);
-    padding: var(--task-padding, 12px);
+    padding: var(--task-padding, 0 0 0 0);
     background-color: $background-color;
     border: set-var(border, $theme-default, $tasks);
-    border-radius: 8px;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 
     .TaskContent {
       display: flex;
@@ -209,7 +206,7 @@ $background-color: set-var(background-color__sub1, $theme-default, $common);
           grid-column: 1 / 3;
           -ms-grid-column: 1;
           -ms-grid-column-span: 2;
-          align-self: center;
+          margin: 22px 0 4px;
         }
 
         .TaskGroup {
@@ -356,7 +353,7 @@ $background-color: set-var(background-color__sub1, $theme-default, $common);
 
         svg {
           vertical-align: middle;
-          margin-right: 6px;
+          margin-right: 4px;
 
           path {
             fill: $detail__color;
@@ -478,7 +475,6 @@ $background-color: set-var(background-color__sub1, $theme-default, $common);
       margin: var(--task-new-margin, var(--task-margin, 0 0 24px 0));
       display: flex;
       flex-direction: row;
-      height: 138px;
 
       .SelfAssign {
         display: none;
@@ -510,37 +506,31 @@ $background-color: set-var(background-color__sub1, $theme-default, $common);
         flex: 1 1 auto;
         align-content: center;
         vertical-align: middle;
-        margin: 0;
+        margin: 0 0 0 12px;
 
         .TaskDetailsContainer {
           display: flex;
           flex-direction: column;
-          margin: 26px 0 0 26px;
+          align-items: stretch;
+          margin: 0;
 
           .TaskTitle {
             display: flex;
-            border-radius: 4px;
-            border: 1px solid #e5e5e5;
-            padding: 2px;
-            width: 390px;
             height: 32px;
-            margin-bottom: 30px;
-            align-self: flex-start;
+            padding: 2px;
 
             input {
-              flex: none;
+              flex: 1;
               font-family: var(--default-font-family, 'Segoe UI');
-              margin: var(--task-new-input-margin, 6px 0 6px 12px);
+              margin: var(--task-new-input-margin, 0 24px 0 16px);
+              padding: var(--task-new-input-padding, 6px);
               font-size: var(--task-new-input-font-size, 14px);
+              font-weight: 600;
               border: var(--task-new-border, none);
+              border-bottom: 1px solid $ms-color-gray40;
               outline: none;
               border-radius: 0;
               background-color: set-var(background-color__sub1, $theme-default, $common);
-              width: 83px;
-              align-items: center;
-              display: flex;
-              color: #717171;
-              order: 0;
             }
 
             input:hover {
@@ -558,14 +548,13 @@ $background-color: set-var(background-color__sub1, $theme-default, $common);
 
           .TaskDetails {
             display: flex;
-            justify-content: space-between;
+            justify-content: stretch;
             align-items: center;
             flex-wrap: wrap;
-            margin-bottom: 26px;
-            width: 390px;
+            margin: 14px 0 14px 4px;
 
             .NewTaskGroup {
-              margin: 0;
+              margin: 8px 16px;
             }
 
             .NewTaskBucket {
@@ -573,7 +562,7 @@ $background-color: set-var(background-color__sub1, $theme-default, $common);
             }
 
             .NewTaskDue {
-              margin: 0;
+              margin: 8px 16px;
             }
 
             .NewTaskAssignee {
@@ -591,13 +580,9 @@ $background-color: set-var(background-color__sub1, $theme-default, $common);
             input {
               font-family: $font-family;
               font-size: 12px;
-              border: 1px solid #e5e5e5;
+              font-weight: 600;
+              border: var(--task-new-select-border, none);
               border-bottom: 1px solid $ms-color-gray40;
-              border-radius: 4px;
-              outline: 0px;
-              padding: 2px;
-              width: 102px;
-              height: 32px;
 
               &:hover {
                 border-bottom: 1px solid $ms-color-communicationShade10;
@@ -611,19 +596,12 @@ $background-color: set-var(background-color__sub1, $theme-default, $common);
                 border-bottom: 1px solid $ms-color-communicationPrimary;
               }
             }
-
-            select,
-            input[type='date'] {
-              border-bottom: 1px solid #e5e5e5;
-              padding-left: 12px;
-            }
           }
         }
       }
 
       .TaskAddButtonContainer {
-        display: block;
-        margin-right: 26px;
+        margin-right: 28px;
 
         .TaskAdd,
         .TaskCancel {
@@ -635,8 +613,7 @@ $background-color: set-var(background-color__sub1, $theme-default, $common);
           width: var(--tasks-new-button-width, 100px);
           height: var(--tasks-new-button-height, 32px);
           border-radius: 4px;
-          padding: 2px;
-          border: var(--tasks-new-button-border, solid 1px rgba(0, 0, 0, 0));
+          border: var(--tasks-new-button-border, solid 1px #e5e5e5);
           font-family: var(--default-font-family, 'Segoe UI');
           font-size: 14px;
           line-height: 20px;
@@ -646,17 +623,17 @@ $background-color: set-var(background-color__sub1, $theme-default, $common);
         .TaskAdd {
           color: white;
           background: var(--task-new-add-button-background, $ms-color-communicationPrimary);
-          margin: 26px 0 12px auto;
+          margin: 22px 0 12px auto;
           // margin: 22px 12px 8px 32px;
         }
 
         .TaskCancel {
           color: $button__color--cancel;
-          border: 1px solid #e5e5e5;
         }
 
         &.Disabled .TaskAdd {
-          background: var(--task-new-add-button-disabled-background, #eaeaea);
+          color: $button__color--cancel;
+          background: var(--task-new-add-button-disabled-background, #ffffff);
           cursor: default;
         }
       }
