Change the border-radius of filelist:hover and icon border

--- a/packages/mgt-components/src/components/mgt-file-list/mgt-file-list.scss
+++ b/packages/mgt-components/src/components/mgt-file-list/mgt-file-list.scss
@@ -75,6 +75,7 @@ mgt-file-item .file-list-wrapper {
       &:hover,
       &.focused {
         background-color: $file-item-background-color--hover;
+        border-radius: 4px;
 
         mgt-file {
           --file-background-color: $file-item-background-color--hover;
