Update icons for components for higher contrast

--- a/packages/mgt-components/src/components/mgt-agenda/mgt-agenda.scss
+++ b/packages/mgt-components/src/components/mgt-agenda/mgt-agenda.scss
@@ -185,3 +185,10 @@ mgt-agenda .event-attendee-loading {
     }
   }
 }
+
+@media screen and (-ms-high-contrast: active) {
+  svg {
+    fill: white !important;
+    color: white !important;
+  }
+}
