--- a/packages/mgt-components/src/components/mgt-teams-channel-picker/mgt-teams-channel-picker.scss
+++ b/packages/mgt-components/src/components/mgt-teams-channel-picker/mgt-teams-channel-picker.scss
@@ -356,3 +356,11 @@
     padding-left: 10px;
   }
 }
+
+@media screen and (-ms-high-contrast: active) {
+  .root {
+    svg {
+      fill: rgb(255, 255, 255) !important;
+    }
+  }
+}
