Add stricter fill options for svg icons

--- a/packages/mgt-components/src/components/mgt-people-picker/mgt-people-picker.scss
+++ b/packages/mgt-components/src/components/mgt-people-picker/mgt-people-picker.scss
@@ -320,9 +320,12 @@ mgt-flyout {
 }
 
 @media screen and (-ms-high-contrast: active) {
-  svg {
-    fill: white !important;
-    color: white !important;
+  svg,
+  svg > path {
+    fill: rgb(255, 255, 255) !important;
+    fill-rule: nonzero !important;
+    clip-rule: nonzero !important;
+    color: rgb(255, 255, 255) !important;
   }
 
   .flyout-root {
