--- a/packages/mgt-components/src/components/mgt-agenda/mgt-agenda.scss
+++ b/packages/mgt-components/src/components/mgt-agenda/mgt-agenda.scss
@@ -187,8 +187,10 @@ mgt-agenda .event-attendee-loading {
 }
 
 @media screen and (-ms-high-contrast: active) {
-  svg {
-    fill: white !important;
-    color: white !important;
+  svg,svg>path {
+    fill: rgb(255, 255, 255) !important;
+    fill-rule: nonzero !important;
+    clip-rule: nonzero !important;
+    color: rgb(255, 255, 255) !important;
   }
 }
