--- a/packages/mgt-components/src/components/mgt-person/mgt-person.scss
+++ b/packages/mgt-components/src/components/mgt-person/mgt-person.scss
@@ -491,13 +491,12 @@ mgt-person .avatar-icon {
 }
 
 @media screen and (-ms-high-contrast: active) {
-  // .person-root {
-  //   border: 1px solid rgb(255, 255, 255);
-  //   padding: 11px 13px;
-  // }
-
   :host svg,
-  mgt-person svg {
+  :host svg > path,
+  mgt-person svg,
+  mgt-person svg > path {
     fill: rgb(255, 255, 255) !important;
+    fill-rule: nonzero !important;
+    clip-rule: nonzero !important;
   }
 }
