Announce nested controls when searching for a component and viewing components (#1646)
* Set a correct contrast

* Remove aria-expanded on the sidebar menus

* Use shared variables for CSS colors

--- a/packages/mgt-components/src/components/mgt-tasks-base/mgt-tasks-base.scss
+++ b/packages/mgt-components/src/components/mgt-tasks-base/mgt-tasks-base.scss
@@ -363,6 +363,7 @@ $task-border-completed: var(--task-complete-border, 2px dotted inherit);
         span,
         select {
           vertical-align: middle;
+          color: set-var(color__sub2, $theme-default, $common);
         }
 
         .TaskIcon {
